--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/digital/sw.js').then(function(registration) {
+        navigator.serviceWorker.register('/BentoMenu/sw.js').then(function(registration) {
           console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }, function(err) {
           console.log('ServiceWorker registration failed: ', err);
