--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
         <input type="text" placeholder="漬物(下段真ん中)を入力">
         <input type="text" placeholder="主食(下段右)を入力">
       </div>
-      <button class="register" onclick="register()">登録</button>
+      <button class="register" onclick="registerMenu()">登録</button>
     </div>
     <div class="tab-content" id="tab2">
       2
     </div>
   </div>
   <script src="src/tab.js"></script>
-  <script src="src/register.js"></script>
+  <script src="src/registerMenu.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
